@@ -2,6 +2,7 @@ package org.jacp.service;
 
 import org.jacp.entity.QuestionEntity;
 import org.jacp.enums.Difficulty;
+import org.jacp.enums.Tags;
 import org.jacp.error.NoEntityException;
 import org.jacp.repository.QuestionRepository;
 import org.junit.jupiter.api.Assertions;
@@ -13,7 +14,6 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -36,7 +36,7 @@ class QuestionServiceTest {
     static Long questionId = 1L;
     static String problem = "TestProblem";
     static Difficulty difficulty = Difficulty.EASY;
-    static List<String> tags = Arrays.asList("MATH", "STRING");
+    static List<Tags> tags = List.of(Tags.MATH, Tags.STRING);
     static String description = "TestDescription";
     static String imports = "TestImports";
     static String body = "TestBody";
